# DaisySeed-ScreamDetector

./: .gitignore  CMakeLists.txt  Makefile  Makefile.possible  build_in_msys.example.sh  main_clapper_rms.cpp  toolchain.cmake
inc/: fft.cpp  fft.h
scream_ml/: feature_extraction.py  notes.txt  sound_id_list.txt  sounds.txt
scream_ml/scrape/: freesound_scraper.py  sound_url.txt
src/: circular_buffer.cpp  main_mcff_compare.cpp  myutils.h  possible_implimentation.cpp  steaming_mfcc.cpp
